--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,12 @@
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.6.5</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.MedicalAttention</groupId>
+            <artifactId>MedicalAttention</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
